Retornando dados para preencher o dashboard
