# src/main/java/br/com/reclamei/reclamation/entrypoint/api/mapper/ReclamationApiMapper.java
@@ -1,6 +1,8 @@
 package br.com.reclamei.reclamation.entrypoint.api.mapper;
 
+import br.com.reclamei.reclamation.core.domain.DashboardDomain;
 import br.com.reclamei.reclamation.core.domain.ReclamationDomain;
+import br.com.reclamei.reclamation.entrypoint.api.dto.DashboardResponse;
 import br.com.reclamei.reclamation.entrypoint.api.dto.ReclamationCreateRequest;
 import br.com.reclamei.reclamation.entrypoint.api.dto.ReclamationResponse;
 import br.com.reclamei.reclamation.entrypoint.api.dto.ReclamationUpdateRequest;
@@ -22,5 +24,7 @@ public interface ReclamationApiMapper {
 
     @Mapping(target = "status", expression = "java(status.name())")
     List<ReclamationResponse> toResponse(List<ReclamationDomain> domain);
+
+    DashboardResponse toResponse(DashboardDomain domain);
 
 }
